--- a/src/pages/Home/Teams/TeamCarousel.css
+++ b/src/pages/Home/Teams/TeamCarousel.css
@@ -11,6 +11,7 @@
   display: -webkit-flex;
   display: flex;
   flex-direction: column;
+  margin: 20px 15px;
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   -webkit-justify-content: center;
@@ -23,13 +24,25 @@
 
 .package {
   width: 300px !important;
+  padding: 30px;
+  border-radius: 5px;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+}
+
+.underline {
+  width: 3rem;
+  height: 2px;
+  background-color: purple;
+  margin: 0 auto;
+  border-radius: 10px;
 }
 
 .package img {
-  width: 100;
-  width: 100%;
-  height: 250px;
-  border-radius: 5px;
+  background-color: #e8edfb;
+  padding: 10px;
+  width: 150px;
+  height: 150px;
+  border-radius: 100%;
 }
 
 @media only screen and (max-width: 640px) {
